--- a/.obsidian.mobile/workspace
+++ b/.obsidian.mobile/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/posts/pitoco.md",
+            "file": "src/SUMMARY.md",
             "mode": "source"
           }
         }
@@ -45,7 +45,7 @@
         }
       }
     ],
-    "currentTab": 1
+    "currentTab": 0
   },
   "right": {
     "id": "dfe589ae70cd2615",
@@ -57,7 +57,7 @@
         "state": {
           "type": "backlink",
           "state": {
-            "file": "src/posts/pitoco.md",
+            "file": "src/SUMMARY.md",
             "collapseAll": false,
             "extraContext": false,
             "sortOrder": "alphabetical",
@@ -73,9 +73,9 @@
   },
   "active": "6babd83cfb282d0a",
   "lastOpenFiles": [
-    "src/posts/pitoco.md",
     "src/SUMMARY.md",
     "about.md",
+    "src/posts/pitoco.md",
     "README.adoc.md"
   ]
 }
