--- a/.obsidian.mobile/workspace
+++ b/.obsidian.mobile/workspace
@@ -74,7 +74,7 @@
   "active": "6babd83cfb282d0a",
   "lastOpenFiles": [
     "src/SUMMARY.md",
-    "about.md",
+    "src/about.md",
     "src/posts/pitoco.md",
     "README.adoc.md"
   ]
