--- a/.obsidian.mobile/workspace
+++ b/.obsidian.mobile/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "src/posts/pitoco.md",
-            "mode": "source"
+            "mode": "preview"
           }
         }
       }
